--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@types/node": "18.15.11",
@@ -23,5 +24,8 @@
     "node": ">=16.0.0",
     "yarn": ">=1.22.0",
     "npm": "please-use-yarn"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.7"
   }
 }
